2007-02-20  Takeru INOUE  <takeru.inoue at gmail.com>
        * release 0.0.1: created by h2xs 1.23 with options
          -XAn XML::Atom::Service