@@ -1,3 +1,10 @@
+2007-02-22  Takeru INOUE  <takeru.inoue at gmail.com>
+
+        * release 0.0.2:
+	* implement OOP interface
+        * add some elements to @Elements
+
 2007-02-20  Takeru INOUE  <takeru.inoue at gmail.com>
+
         * release 0.0.1: created by h2xs 1.23 with options
           -XAn XML::Atom::Service
